Fixed invisible checks

--- a/gtk/Standard/gtk-3.0/sass/src/_checkradio.scss
+++ b/gtk/Standard/gtk-3.0/sass/src/_checkradio.scss
@@ -72,7 +72,7 @@ check, radio {
 		(":backdrop", "backdrop"),
 		(":backdrop:disabled", 'backdrop-insensitive') {
 			&#{$state} {
-				@include check($t, $fill);
+				@include check($t, $color);
 			}
 		}
 	}
